feat: HTTP response 핸들링 및 content type 서포트 추가